[tool.poetry]
name = "bitsharesscripts"
version = "1.0.1"
description = "A set of scripts for BitShares"
authors = ["Vladimir Kamarzin <vvk@vvk.pp.ru>"]
license = "MIT"
repository = "https://github.com/bitfag/bitshares-scripts"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.1.1"
bitshares = "^0.4.0"
uptick = "^0.2.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.2.0"

[tool.black]
line-length = 120
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
